<resources>
    <string name="app_name">interviewTestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Authentication">ثبت نام</string>
    <string name="enterdata">لطفا اطلاعات خود را وارد نمایید.</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="phonenumber">تلفن همراه</string>
    <string name="homephonenumber">تلفن ثابت</string>
    <string name="address">آدرس دقیق</string>
    <string name="gender">جنسیت</string>
    <string name="male">آقا</string>
    <string name="female">خانم</string>
    <string name="nextstep">مرحله بعد</string>
    <string name="userslist">لیست کاربران</string>
    <string name="first_name_empty_error">نام نمیتواند خالی باشد</string>
    <string name="first_name_length_error">نام نمیتواند کمتر از دو حرف باشد</string>
    <string name="last_name_empty_error">نام خانوادگی نمیتواند خالی باشد</string>
    <string name="last_name_length_error">نام خانوادگی نمیتواند کمتر از دو حرف باشد</string>
    <string name="phone_number_empty_error">شماره تلفن نمیتواند خالی باشد</string>
    <string name="phone_number_format_error">فرمت شماره تلفن صحیح نیست</string>
    <string name="address_empty_error">آدرس نمیتواند خالی باشد</string>
    <string name="location_empty_error">مکان را انتخاب کنید</string>
    <string name="submit">تایید مکان</string>
    <string name="server_error">خطا در ارتباط با سرور </string>
    <string name="data_submited_to_server">اطلاعات در سرور ثبت گردید</string>
</resources>